<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_azul_escuro_rick">

    <!--    ao implantar API deixar textos como tools-->

    <TextView
        android:id="@+id/episode_info_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/string_label_nome"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/episode_info_nome"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/string_nome_ep_teste"
        android:textColor="@color/cinza_mais_branco"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/episode_info_label_name"
        app:layout_constraintTop_toTopOf="@id/episode_info_label_name"
        app:layout_constraintBottom_toBottomOf="@id/episode_info_label_name"/>

    <TextView
        android:id="@+id/episode_info_label_air_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/string_data_lancamento_label"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/episode_info_label_name"
        app:layout_constraintTop_toBottomOf="@id/episode_info_label_name"/>

    <TextView
        android:id="@+id/episode_info_air_data"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/string_air_date_teste"
        android:textColor="@color/cinza_mais_branco"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/episode_info_label_air_data"
        app:layout_constraintTop_toTopOf="@id/episode_info_label_air_data"
        app:layout_constraintBottom_toBottomOf="@id/episode_info_label_air_data"/>

</androidx.constraintlayout.widget.ConstraintLayout>